--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -8,19 +8,12 @@
 <body>
 
 	<header>
-
-			<nav>
-
-			<ul>
-				
-				<a href="{{ path('home') }}">Voir les recettes de cocktails</a>
-				
-				
-
-			</ul>
-
-		</nav>
-       
-		
-
-	</header>
+    <div class="header-container">
+        <div class="header-message">Bienvenue sur notre site de cocktails</div>
+        <nav>
+            <ul>
+                <li><a href="{{ path('home') }}">Voir TOUS les cocktails</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
