--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -8,12 +8,10 @@
 <body>
 
 	<header>
-    <div class="header-container">
-        <div class="header-message">Bienvenue sur notre site de cocktails</div>
-        <nav>
-            <ul>
+    <div class="header">
+       
                 <li><a href="{{ path('home') }}">Voir TOUS les cocktails</a></li>
-            </ul>
-        </nav>
+                 <li><a href="{{ path('categories') }}">Voir les  nouveaux cocktails</a></li>
+           
     </div>
 </header>
