--- a/templates/categories.html.twig
+++ b/templates/categories.html.twig
@@ -1,9 +1,16 @@
 
 {% extends 'base.html.twig' %}
 
+
+{% block metatitle %}
+	Les catégories de cocktails
+{% endblock metatitle %}
+
+
+
 {% block main %}
 
-<h1>Recettes de nouveaux cocktails</h1>
+<h1>Recettes de nouvelles categories cocktails</h1>
 
 
 
