--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,6 +1,13 @@
 
 {% extends 'base.html.twig' %}
 
+
+{% block metatitle %}
+	Les meilleurs cocktails de Merignac
+{% endblock metatitle %}
+
+
+
 {% block main %}
 
 <h1>Recettes de Cocktails</h1>
