--- a/templates/old.html.twig
+++ b/templates/old.html.twig
@@ -1,6 +1,13 @@
 {% extends 'base.html.twig' %}
 
+{% block metatitle %}
+	{{cocktail.nom}}
+{% endblock metatitle %}
+
 {% block main %}
+
+
+
 
 <h1> Cocktails</h1>
 
