--- a/templates/partials/_aside.html.twig
+++ b/templates/partials/_aside.html.twig
@@ -2,9 +2,8 @@
 
 	<div class="sidebar">
         <a href="{{ path('home') }}">Voir tous les cocktails</a>
-        <a href="#services">Services</a>
-        <a href="#about">À propos</a>
-        <a href="#contact">Contact</a>
+        <a href="{{ path('categories') }}">Voir les nouveaux cocktails</a>
+        
     </div>
 
 	</aside>
