--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
     <div class="header">
        
                 <li><a href="{{ path('home') }}">Voir TOUS les cocktails</a></li>
-                 <li><a href="{{ path('categories') }}">Voir les  nouveaux cocktails</a></li>
+                 <li><a href="{{ path('categories') }}">Voir les  nouvelles categories de  cocktails</a></li>
            
     </div>
 </header>
