--- a/templates/partials/_aside.html.twig
+++ b/templates/partials/_aside.html.twig
@@ -2,7 +2,7 @@
 
 	<div class="sidebar">
         <a href="{{ path('home') }}">Voir tous les cocktails</a>
-        <a href="{{ path('categories') }}">Voir les nouveaux cocktails</a>
+        <a href="{{ path('categories') }}">Voir les nouvelles categories de  cocktails</a>
         
     </div>
 
