--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -10,7 +10,7 @@
 
 {% block main %}
 
-<h1>Recettes de Cocktails</h1>
+<h1>Création de cocktail</h1>
 
 {% include 'partials/pageAccueil/_loop-cocktails.html.twig' %}
 
