--- a/templates/partials/_aside.html.twig
+++ b/templates/partials/_aside.html.twig
@@ -1,9 +1,14 @@
 	<aside class="sidebar">
-
-	<div class="sidebar">
+<div class="sidebar-wrapper">
+    <div class="sidebar">
+	    <div class="sidebar">
+            
         <a href="{{ path('home') }}">Voir tous les cocktails</a>
         <a href="{{ path('categories') }}">Voir les nouvelles categories de  cocktails</a>
+        <li><a href="{{ path('create-cocktail') }}">Creer un nouveau cocktails</a></li>
         
+        </div>
     </div>
+</div>
 
 	</aside>
