--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -11,7 +11,8 @@
     <div class="header">
        
                 <li><a href="{{ path('home') }}">Voir TOUS les cocktails</a></li>
-                 <li><a href="{{ path('categories') }}">Voir les  nouveaux cocktails</a></li>
+                <li><a href="{{ path('categories') }}">Voir les  nouveaux cocktails</a></li>
+                <li><a href="{{ path('create-cocktail') }}">Creer un nouveau cocktails</a></li>
            
     </div>
 </header>
