--- a/templates/partials/pageAccueil/_loop-cocktails.html.twig
+++ b/templates/partials/pageAccueil/_loop-cocktails.html.twig
@@ -7,7 +7,7 @@
             <img src="{{ cocktail.image }}" alt="Image de {{ cocktail.nom }}">
 
             <!-- {# Lien vers la page de détail du cocktail avec passage de l'ID en GET #} -->
-            <a href="{{ path('old', {'id' : cocktail.id }) }}">Voir le détail du cocktail</a>
+            <a href="{{ path('single-cocktail', {'id' : cocktail.id }) }}">Voir le détail du cocktail</a>
 
             <!-- {# Titre avec le nom du cocktail #} -->
             <h2>{{ cocktail.nom }}</h2>
